# gzCrypt

./: CMakeLists.txt  README.md
include/: bigint.hpp
src/: CMakeLists.txt  bigint.cpp
test/: CMakeLists.txt  test.cpp
